[package]
name = "rustls-acme"
version = "0.7.3"
authors = ["Florian Uekermann <florian@uekermann.me>"]
edition = "2018"
description = "TLS certificate management and serving using rustls"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FlorianUekermann/rustls-acme"
documentation = "https://docs.rs/rustls-acme"
keywords = ["acme", "rustls", "tls", "letsencrypt"]
categories = ["asynchronous", "cryptography", "network-programming"]

[dependencies]
futures = "0.3.21"
rcgen = "0.10"
http-types = { version = "2.12.0", default-features = false }
serde_json = "1.0.81"
serde = "1.0.137"
ring = { version = "0.16.20", features = ["std"] }
base64 = "0.13.0"
log = "0.4.17"
webpki-roots = "0.23"
pem = "1.0.2"
thiserror = "1.0.31"
x509-parser = "0.13.2"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
url = "2.2.2"
async-trait = "0.1.53"
rustls = "0.21"

# AsyncStd
async-h1 = { version = "2.3.3", optional = true }
futures-rustls = { version = "0.24", optional = true }
smol = { version = "1.3", optional = true }
async-io = { version = "1.6.0", optional = true }

# Tokio
tokio = { version = "1.20.1", optional = true }
tokio-rustls = { version = "0.24", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }

# Axum
axum-server = { version = "0.5", features = ["tls-rustls"], optional = true }

[dev-dependencies]
simple_logger = "2.1.0"
structopt = "0.3.26"
clap = { version = "3.1.18", features = ["derive"] }
smol-potat = "1.1.2"
axum = "0.6"
tokio = { version="1.19.2", features = ["full"] }
tokio-stream = { version="0.1.9", features = ["net"] }
tokio-util = { version="0.7.3", features = ["compat"] }
warp = "0.3.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_auto_cfg"]

[features]
default = ["async-std"]
axum = ["dep:axum-server", "tokio"]
async-std = ["dep:async-h1", "dep:futures-rustls", "dep:smol", "dep:async-io"]
tokio = ["dep:tokio", "dep:tokio-rustls", "dep:reqwest"]

[[example]]
name="low_level_axum"
required-features=["axum"]

[[example]]
name="high_level_warp"
required-features=["tokio"]

[[example]]
name="high_level_tokio"
required-features=["tokio"]

[[example]]
name="low_level_tokio"
required-features=["tokio"]

[[example]]
name="low_level"
required-features=["async-std"]

[[example]]
name="high_level"
required-features=["async-std"]
