[package]
name = "rustls-acme"
version = "0.7.5"
authors = ["Florian Uekermann <florian@uekermann.me>"]
edition = "2018"
description = "TLS certificate management and serving using rustls"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FlorianUekermann/rustls-acme"
documentation = "https://docs.rs/rustls-acme"
keywords = ["acme", "rustls", "tls", "letsencrypt"]
categories = ["asynchronous", "cryptography", "network-programming"]

[dependencies]
futures-rustls = "0.24"
futures = "0.3.21"
rcgen = "0.10"
serde_json = "1.0.81"
serde = { version = "1.0.137", features=["derive"] }
ring = { version = "0.16.20", features = ["std"] }
base64 = "0.13.0"
log = "0.4.17"
webpki-roots = "0.25"
pem = "1.0.2"
thiserror = "1.0.31"
x509-parser = "0.13.2"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
async-trait = "0.1.53"
async-io = "1.6.0"
rustls = "0.21"
tokio = { version= "1.20.1", optional= true }
tokio-util = { version="0.7.3", features = ["compat"], optional=true }
axum-server = { version = "0.5", features = ["tls-rustls"], optional=true }
async-web-client = "0.2.6"
http = "0.2.9"
blocking = "1.4.1"

[dev-dependencies]
simple_logger = "2.1.0"
structopt = "0.3.26"
clap = { version = "3.1.18", features = ["derive"] }
smol-potat = "1.1.2"
axum = "0.6"
tokio = { version="1.19.2", features = ["full"] }
tokio-stream = { version="0.1.9", features = ["net"] }
tokio-util = { version="0.7.3", features = ["compat"] }
warp = "0.3.4"
async-rustls = "0.4.0"
smol = "1.3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_auto_cfg"]

[features]
axum = ["dep:axum-server", "tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]

[[example]]
name="low_level_axum"
required-features=["axum"]

[[example]]
name="high_level_warp"
required-features=["tokio"]

[[example]]
name="high_level_tokio"
required-features=["tokio"]
